--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
     }
     .title{
         text-align: center;
-        font-size: 20pxpx;
+        font-size: 20px;
     }
     .section-container{
         display: flex;
